--- a/mod2-solution/css/stylesheet.css
+++ b/mod2-solution/css/stylesheet.css
@@ -19,36 +19,37 @@ h1 {
 
 h2 {
   text-align: right;
-  padding-right: 3px;
+  padding: 10px;
+  border-color: purple;
+  border: 2px dashed;
   
 }
 
 p {
  
+  border: 3px double;
   margin-left: 20px;
   background-color: ;
   width: 90%;
   height: auto;
   font-family: Helvetica;
   color: black;
-  padding-left: 20px;
-  padding-right: 10px;
+  padding: 20px;
+  
 
 }
 
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
-  position: relative;
-  
+ 
 }
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3 {
-    float: right;
-    border: 1px solid green;
-    position: relative;
+    float: left;
+   
   }
   .col-lg-1 {
     width: 8.33%;
@@ -66,7 +67,6 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3 {
     float: left;
-    border: 1px solid green;
   }
   .col-md-1 {
     width: 8.33%;
@@ -84,8 +84,7 @@ p {
 @media  (max-width: 765px) {
   .col-sm-1, .col-sm-2, .col-sm-3 {
     float: left;
-    border: 1px solid green;
-  }
+   }
   .col-sm-1 {
     width: 8.33%;
   }
